# genai-solutions-development-bootcamp

./: README.md
genai-bootcamp-restaurant-api/: README.md  pyproject.toml
genai-bootcamp-restaurant-api/app/: agent.py  ingestion.py  prompt.py  server.py  tools.py
genai-bootcamp-restaurant-api/chat_histories/: 1.json  123.json
genai-solutions-development-bootcamp/: Untitled.ipynb  pyproject.toml
genai-solutions-development-bootcamp/genai-bootcamp-restaurant-api-v1/: README.md
genai-solutions-development-bootcamp/genai-bootcamp-restaurant-api-v1/app/: restaurant_agentic.py  server.py  teste.py
genai-solutions-development-bootcamp/genai_solutions_development_bootcamp/: exploration.ipynb
