[tool.poetry]
name = "/home/baptvit/genai-bootcamp-restaurant-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
langchain = ">0.0.0"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "1.10.3"
langchain-community = ">0.0.0"
langchain-google-genai = "1.0.3"
pandas = "^2.2.2"
black = "^24.8.0"
ruff = "^0.6.4"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
