[tool.poetry]
name = "genai-solutions-development-bootcamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.16"
jupyterlab = "^4.2.5"
pandas = "^2.2.2"
langchain-openai = "^0.1.23"
langchain-google-genai = "^1.0.10"
langchain-community = "^0.2.16"
langserve = {extras = ["all"], version = "^0.2.3"}
langchain-cli = "^0.0.30"
pydantic = "2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
